# libctg

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_luajit.bat  build_luajit.sh
.github/workflows/: release.yml
src/: ctg.h  ctg_grid.c  ctg_grid.h  ctg_io.c  ctg_io.h  ctg_iterator.c  ctg_iterator.h  ctg_lua.c  ctg_move.c  ctg_move.h  ctg_movestack.c  ctg_movestack.h  ctg_types.h  libctg.c  libctg.h  libctg_lua.c  main.c  utils.c
